Initial commit of implemented project.
